IRT-4663 Support SAP Passport